--- a/index.html
+++ b/index.html
@@ -43,6 +43,44 @@
             margin: 0 auto 20px;
         }
 
+        .parameters-container {
+            background-color: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+            margin-bottom: 20px;
+        }
+
+        .parameters-title {
+            font-size: 18px;
+            font-weight: bold;
+            margin-bottom: 15px;
+            color: var(--primary);
+        }
+
+        .parameter-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            gap: 15px;
+        }
+
+        .parameter-item {
+            margin-bottom: 10px;
+        }
+
+        .parameter-item label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: 500;
+        }
+
+        .parameter-item input {
+            width: 100%;
+            padding: 8px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
+
         #startButton {
             padding: 12px 24px;
             font-size: 16px;
@@ -97,28 +135,25 @@
             justify-content: center;
         }
 
-        .user-header {
-            font-weight: bold;
-            font-size: 18px;
-            padding-bottom: 8px;
-            margin-bottom: 10px;
-            border-bottom: 2px solid var(--primary);
+        .section-heading {
+            text-align: center;
+            margin: 30px 0 20px;
+            width: 100%;
+        }
+
+        .section-heading h2 {
+            display: inline-block;
             color: var(--primary);
+            padding: 0 20px 10px;
+            border-bottom: 3px solid var(--primary);
         }
 
-        .stat-row {
+        .cards-container {
             display: flex;
-            justify-content: space-between;
-            padding: 5px 0;
-            border-bottom: 1px dashed #eee;
-        }
-
-        .stat-label {
-            color: #666;
-        }
-
-        .stat-value {
-            font-weight: bold;
+            flex-wrap: wrap;
+            gap: 15px;
+            justify-content: center;
+            width: 100%;
         }
 
         .footer {
@@ -135,6 +170,28 @@
     <p class="description">This simulation demonstrates ML-KEM-1024 encryption/decryption and ML-DSA-87 digital signatures with multiple users.</p>
 </header>
 
+<div class="parameters-container">
+    <div class="parameters-title">Simulation Parameters</div>
+    <div class="parameter-grid">
+        <div class="parameter-item">
+            <label for="numUsers">Number of Users:</label>
+            <input type="number" id="numUsers" min="2" max="100" value="30">
+        </div>
+        <div class="parameter-item">
+            <label for="numDocuments">Number of Documents:</label>
+            <input type="number" id="numDocuments" min="1" max="100" value="10">
+        </div>
+        <div class="parameter-item">
+            <label for="maxEditsPerUser">Max Edits Per User:</label>
+            <input type="number" id="maxEditsPerUser" min="1" max="50000" value="1000">
+        </div>
+        <div class="parameter-item">
+            <label for="logFrequency">Log Frequency:</label>
+            <input type="number" id="logFrequency" min="100" max="10000" value="1000">
+        </div>
+    </div>
+</div>
+
 <button id="startButton">Start Simulation</button>
 
 <div id="output">
@@ -147,83 +204,16 @@
 </footer>
 
 <script type="module">
-    import { User } from './User.js';
-    import { DocumentServer } from './DocumentServer.js';
+    import { runSimulation } from './Simulation.js';
 
-    const NUM_USERS = 5;
-
-    async function runSimulation() {
-        const logDiv = document.getElementById("simulation-log");
-        const resultsDiv = document.getElementById("results");
-
-        logDiv.innerHTML = "Starting simulation...<br>";
-        resultsDiv.innerHTML = "";
-
-        const users = [];
-        logDiv.innerHTML += "Initializing users...<br>";
-
-        for (let i = 0; i < NUM_USERS; i++) {
-            const user = new User(i);
-            await user.init();
-            users.push(user);
-            logDiv.innerHTML += `Initialized User ${i}<br>`;
-        }
-
-        const server = new DocumentServer(users);
-
-        logDiv.innerHTML += "<br>Starting message exchange:<br>";
-        for (const sender of users) {
-            const message = `Message from User ${sender.id}`;
-            logDiv.innerHTML += `User ${sender.id} sending message to ${NUM_USERS-1} recipients<br>`;
-
-            for (const recipient of users) {
-                if (sender.id !== recipient.id) {
-                    logDiv.innerHTML += `- Creating message for User ${recipient.id}<br>`;
-                    const block = await sender.encryptAndSignBlock(message, recipient.kemKeys.publicKey);
-                    block.recipientId = recipient.id;
-                    await server.broadcastBlock(block);
-                }
-            }
-        }
-
-        logDiv.innerHTML += "<br>Simulation completed!<br>";
-
-        // Display results in cards
-        users.forEach((u) => {
-            const userCard = document.createElement('div');
-            userCard.className = 'user-stats';
-
-            const encryptTime = u.stats.reduce((a, b) => a + (b.encryptTime || 0), 0) /
-                u.stats.filter(s => s.encryptTime).length || 0;
-            const signTime = u.stats.reduce((a, b) => a + (b.signTime || 0), 0) /
-                u.stats.filter(s => s.signTime).length || 0;
-            const decryptTime = u.stats.reduce((a, b) => a + (b.decryptTime || 0), 0) /
-                u.stats.filter(s => s.decryptTime).length || 0;
-            const verifyTime = u.stats.reduce((a, b) => a + (b.verifyTime || 0), 0) /
-                u.stats.filter(s => s.verifyTime).length || 0;
-
-            userCard.innerHTML = `
-                    <div class="user-header">User ${u.id}</div>
-                    <div class="stat-row">
-                        <span class="stat-label">Encryption:</span>
-                        <span class="stat-value">${encryptTime.toFixed(2)} ms</span>
-                    </div>
-                    <div class="stat-row">
-                        <span class="stat-label">Signing:</span>
-                        <span class="stat-value">${signTime.toFixed(2)} ms</span>
-                    </div>
-                    <div class="stat-row">
-                        <span class="stat-label">Decryption:</span>
-                        <span class="stat-value">${decryptTime.toFixed(2)} ms</span>
-                    </div>
-                    <div class="stat-row">
-                        <span class="stat-label">Verification:</span>
-                        <span class="stat-value">${verifyTime.toFixed(2)} ms</span>
-                    </div>
-                `;
-
-            resultsDiv.appendChild(userCard);
-        });
+    // Function to get parameters from input fields
+    function getSimulationParameters() {
+        return {
+            numUsers: parseInt(document.getElementById('numUsers').value, 10),
+            numDocuments: parseInt(document.getElementById('numDocuments').value, 10),
+            maxEditsPerUser: parseInt(document.getElementById('maxEditsPerUser').value, 10),
+            logFrequency: parseInt(document.getElementById('logFrequency').value, 10)
+        };
     }
 
     document.addEventListener('DOMContentLoaded', () => {
@@ -232,7 +222,9 @@
             startButton.disabled = true;
             startButton.textContent = "Running...";
 
-            runSimulation().then(() => {
+            const params = getSimulationParameters();
+
+            runSimulation(params).then(() => {
                 startButton.disabled = false;
                 startButton.textContent = "Run Again";
             }).catch((error) => {
