multiRecipient encryption for PQC

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <label for="cryptoScheme">Cryptography Scheme:</label>
                 <select id="cryptoScheme" name="cryptoScheme">
                     <option value="pqc" selected>Post-Quantum (ML-KEM/ML-DSA)</option>
-                    <option value="classic">Classic (NaCl)</option>
+                    <option value="nacl">Classic (NaCl)</option>
                 </select>
             </div>
 
