--- a/index.html
+++ b/index.html
@@ -62,6 +62,15 @@
                 </select>
             </div>
 
+            <div class="parameter-item">
+                <label for="encryptorType">Encryptor Type:</label>
+                <select id="encryptorType" name="encryptorType">
+                    <option value="mailbox" selected>Mailbox (1:1 Encryption)</option>
+                    <option value="team">Team (Document Collaboration)</option>
+                </select>
+                <span class="input-hint">Mailbox for chat, Team for document editing</span>
+            </div>
+
             <div class="button-group">
                 <button type="submit" id="startButton" class="primary-button">Start Simulation</button>
                 <button type="button" id="resetButton" class="secondary-button" disabled>Reset Results</button>
