--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 <select id="cryptoScheme" name="cryptoScheme">
                     <option value="pqc" selected>Post-Quantum (ML-KEM/ML-DSA)</option>
                     <option value="nacl">Classic (NaCl)</option>
+                    <option value="elgamal">ElGamal (ECDH+AES-GCM)</option>
                 </select>
             </div>
 
